--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,8 @@ target-version = ["py311", "py312"]
 
 [tool.ruff]
 line-length = 88
+
+[tool.ruff.lint]
 select = ["E", "F", "I", "N", "W", "UP"]
 ignore = ["E501"]
 
