formatting and small fixes, added commit hook

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,7 +69,7 @@ line-length = 88
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "N", "W", "UP"]
-ignore = ["E501"]
+ignore = ["E501", "UP038", "UP042", "N818"]
 
 [tool.mypy]
 python_version = "3.11"
@@ -98,4 +98,3 @@ show_missing = true
 
 [tool.coverage.html]
 directory = "htmlcov"
-
